quark/test/quark/AST/Errors/cannotTakeAddresOfRValue-004.qk
// RUN: quark --emit-ast "%s" 2>&1 | FileCheck "%s"


// XFAIL: *

fn foo: -> void {
  var i := 1;
  & &i;
}
